# C_Cpp_learning

./: README.md
C - copy string with filter/: main.c  readme.md
C - csv to array/: readme.md
C - emb learn/: main.c  makefile
C - matrix transpose/: main.c  readme.md
C - strip string/: main.c  readme.md
C - tic tac toe console output/: main.c  readme.md
CPP - CMake/: CMakeLists.txt
CPP - CMake/include/: vector2int.h
CPP - CMake/src/: main.cpp  vector2int.cpp
CPP - SDL3/: CMakeLists.txt
CPP - SDL3 but Forms/: CMakeLists.txt
CPP - SDL3 but Forms/include/: button.h  control.h  form.h  label.h
CPP - SDL3 but Forms/src/: button.cpp  control.cpp  form.cpp  label.cpp  main.cpp
CPP - SDL3/include/: main.h
CPP - SDL3/src/: main.cpp
CPP - Switchy/: CMakeLists.txt  README.md
CPP - Switchy/include/: KeyboardHook.h  Settings.h  Utils.h
CPP - Switchy/src/: KeyboardHook.cpp  main.cpp
CPP - TCP chat server/: CMakeLists.txt
CPP - TCP chat server/include/: Logger.h  ServerLogger.h  TCPServer.h
CPP - TCP chat server/src/: Logger.cpp  ServerLogger.cpp  TCPServer.cpp  main.cpp
CPP - WinAPI/: CMakeLists.txt
CPP - WinAPI/include/: BaseWindow.h  MainWindow.h  main.h
CPP - WinAPI/libs/filelogger/: CMakeLists.txt
CPP - WinAPI/libs/filelogger/include/logger/: Logger.h
CPP - WinAPI/libs/filelogger/src/: FileLogger.cpp
CPP - WinAPI/src/: MainWindow.cpp  main.cpp
CPP - keyboard hook/: CMakeLists.txt
CPP - keyboard hook/include/: Actions.h  KeyboardHook.h  Utils.h  WindowsHookBase.h
CPP - keyboard hook/src/: KeyboardHook.cpp  Utils.cpp  main.cpp
CPP - struct/: Makefile
CPP - struct/include/: vector2int.h
CPP - struct/src/: main.cpp  vector2int.cpp
csv to array/: main.c  readme.md
libs/: README.md
libs/ActionsLib/: CMakeLists.txt
libs/filelogger/include/logger/: FileLogger.h
libs/filelogger/src/: Logger.cpp
